2012-01-20 German Arias <german@xelalug.org>

	* Source/GSInfoPanel.m (-initWithDictionary:): Fix bug #35335.

2012-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setStringValue:, setObjectValue:): Always use
	ASSIGNCOPY for the contents. This fixes memory leak of last
	commit.

2012-01-19 Riccardo Mottola <rm@gnu.org>

	*Source/NSCell.m:
	Copy contents before setting it [setObjectValue]

2012-01-18 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSImageView.h,
	* Source/NSImageView.m: Protect image drag with new ivar that gets
	set via a new GNUstep extension method.

2012-01-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:):
	Draw image with 50% opacity if the cell is disabled

2012-01-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTableColumn.m (-initWithIdentifier:): Make data
	cell editable by default.

2011-01-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Source/NSImage.m:
	Attempt to get image support working as documented again ... restore
	code in GSTheme to set up new named images on activation and restore
	originals on deactivation (rather than doing everything in a
	notification handler at the wrong point).
	Honor +imageClass as the class to load new images again.
	Hopefully this will get the windows and gnome
	themes working again (though I dn't use either).

2011-01-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m: Clean up and simplify theme switching based on
	defaults system values.

2012-01-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSStandardWindowDecorationView.m (-mouseDown:): Pass the
	event on to the super implementation if we don't handle it.

2012-01-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (+_clearFileTypeCaches): Use DESTROY instead
	of RELEASE.
	Patch by Philippe Roussel <p.o.roussel@free.fr>.

2012-01-10  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Remove duplicate #import